[gd_scene load_steps=4 format=3 uid="uid://daole3dpr3ja2"]

[ext_resource type="Script" uid="uid://bgvykjji86myt" path="res://smooth_terrain/player.gd" id="1_2tc2v"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vjl7a"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2tc2v"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_2tc2v")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_vjl7a")

[node name="body" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_2tc2v")

[node name="head_camera_container" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="head_camera" type="Camera3D" parent="head_camera_container"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6473733, 0)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_left = 1009.0
offset_top = 12.0
offset_right = 1137.0
offset_bottom = 140.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(128, 128)
render_target_update_mode = 4

[node name="rear_camera_container" type="Node3D" parent="SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="rear_camera" type="Camera3D" parent="SubViewportContainer/SubViewport/rear_camera_container"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.9611365, 0.27607355, 0, -0.27607355, 0.9611365, 0, 2.7724218, 4.3746586)
